[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/icon.svg" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://audio/laserShoot.wav" type="AudioStream" id=3]
[ext_resource path="res://scenes/Bullet.tscn" type="PackedScene" id=4]
[ext_resource path="res://audio/player_explosion.wav" type="AudioStream" id=5]
[ext_resource path="res://scenes/Missile.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 64.75 )

[node name="Player" type="Area2D" groups=["Player"]]
position = Vector2( 57, 296 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
Bullet = ExtResource( 4 )
Missile = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ShootPoint" type="Position2D" parent="."]
position = Vector2( 75, 0 )

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="PlayerExplosionSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
